--- a/src/frontend/i18n/js/components/CourseGlimpseList/CourseGlimpseList.json
+++ b/src/frontend/i18n/js/components/CourseGlimpseList/CourseGlimpseList.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "components.CourseGlimpseList.courseCount",
-    "description": "Result count for course search. Appears right above search results",
-    "defaultMessage": "Showing {courseCount, number} {courseCount, plural, one {course} other {courses}} matching your search"
+    "description": "Result count & pagination information for course search. Appears right above search results",
+    "defaultMessage": "Showing {start, number} to {end, number} of {courseCount, number} {courseCount, plural, one {course} other {courses}} matching your search"
   }
 ]
