🔧(edulib) changing "Hosted by" filter to "Host" and fix colour palette name

--- a/sites/funmooc/src/backend/locale/fr_FR/LC_MESSAGES/django.po
+++ b/sites/funmooc/src/backend/locale/fr_FR/LC_MESSAGES/django.po
@@ -1364,8 +1364,8 @@ msgid "Availability"
 msgstr "Disponibilité"
 
 #: apps/search/defaults.py:90
-msgid "Hosted by"
-msgstr "Hébergé par"
+msgid "Host"
+msgstr "Hébergeur"
 
 #: apps/search/defaults.py:103
 msgid "Certificate"
